# QmlMemory

./: CMakeLists.txt  Card.qml  Deck.qml  Game.qml  README.md  cpu.js  main.cpp  main.qml  normal_random.cpp  normal_random.h  qml.qrc
.github/workflows/: ci.yml
iwanthue/: distances.js  helpers.js  index.js  presets.js  rng.js
